<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:background="#A0BCD9"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/stopwatch" />
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Timer"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/Score"
            android:textColor="@color/purple_700"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:text="@string/GuessStatement" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_margin="5dp"
        android:background="@drawable/border_image"
        tools:srcCompat="@drawable/bluefish" />

    <LinearLayout
        android:id="@+id/choices_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="10dp">

        <Button
            android:id="@+id/ans1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@drawable/border_image"
            android:onClick="answerSelected"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/ans2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@drawable/border_image"
            android:textColor="@color/white"
            android:onClick="answerSelected"/>

        <Button
            android:id="@+id/ans3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:textColor="@color/white"
            android:background="@drawable/border_image"
            android:onClick="answerSelected"/>

        <Button
            android:id="@+id/ans4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:textColor="@color/white"
            android:background="@drawable/border_image"
            android:onClick="answerSelected"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correct"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:text="@string/next"
            android:layout_gravity="center_horizontal"
            android:onClick="nextQuestion"/>

    </LinearLayout>




</LinearLayout>