<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A0BCD9"
    tools:context=".App1">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="500dp"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:background="@drawable/cardbackground_1">

            <Button
                android:id="@+id/start_btn"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:background="#00000000"
                android:fontFamily="cursive"
                android:gravity="left"
                android:padding="25dp"
                android:text="@string/app1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="76dp"
                android:layout_height="68dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:src="@drawable/map" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="25dp" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:background="@drawable/cardbackground_2">

            <Button
                android:id="@+id/start2_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:fontFamily="cursive"
                android:gravity="left"
                android:padding="25dp"
                android:text="@string/app2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="149dp"
                android:layout_height="73dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-16dp"
                android:src="@drawable/whale" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:padding="30dp"
            android:outlineSpotShadowColor="@color/white"
            android:outlineAmbientShadowColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="25dp"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:padding="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:text="@string/result_msg"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="260dp"
        android:text="Your Scores"
        android:textColor="@color/white"
        style="bold|italic"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>